Fix images being stretched

--- a/css/index.css
+++ b/css/index.css
@@ -15,7 +15,7 @@
 
 .image img {
     max-height: 300px;
-    width: 200px;
+    max-width: 200px;
 }
 
 #images-container {
